# endnote-bibtex-postprocessor

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: bibtex_postprocessor.py
